--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base code</title>
+    <title>WeldCraft | Forging Excellence, One Weld at a Time</title>
     <!-- css -->
     <link rel="stylesheet" href="frontend/css/styles.css">
     <link rel="stylesheet" href="frontend/css/responsive.css">
