--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- emailJS setup -->
+    <script src="frontend/js/auth.js"></script>
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init({
+            publicKey: "pLSheigHPKvw3i_2m",
+            });
+        })();
+    </script>
 </head>
 <body>
     <!-- header section for logo and navigation -->
@@ -271,7 +285,7 @@
           <div class="error" id="errorMessage"></div>
           <div class="success" id="successMessage"></div>
         </form>
-        <button id="form-submit-btn">Send Message</button>
+        <button id="form-submit-btn" onclick="sendMail();">Send Message</button>
       </div>
     </section>
 
@@ -301,9 +315,6 @@
 
     <script src="frontend/js/script.js">
     </script>
-
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="/frontend/js/auth.js"></script>
 
 </body>
 </html>
